# swarm

./: .gitignore  AGENT_TASK.md  DECOMPOSITION_TAXONOMY.md  ERROR_HANDLING_WORK_SUMMARY.md  README.md  WORK_SUMMARY.md  brainstorm_1.md
backend/: .env.example  .gitignore  README.md  __init__.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
backend/src/: __init__.py
backend/src/decomposition_pipeline/: __init__.py  main.py
backend/src/decomposition_pipeline/agents/: __init__.py  agent_types.py  pool.py  pool_manager.py  routing.py
backend/src/decomposition_pipeline/api/: app.py
backend/src/decomposition_pipeline/catalog/: __init__.py  models.py  techniques.py
backend/src/decomposition_pipeline/checkpoint/: __init__.py  checkpoint_manager.py  recovery.py  sqlite_saver.py
backend/src/decomposition_pipeline/config/: settings.py
backend/src/decomposition_pipeline/errors/: __init__.py  exceptions.py  handlers.py
backend/src/decomposition_pipeline/graphs/: __init__.py  (+1 more)
backend/tests/: test_api.py  test_api_pipeline.py  test_catalog.py  test_level1_paradigm.py  test_level3_decomposition.py  test_level4_solution.py  test_level5_integration.py  test_main_graph.py  test_schemas.py  test_sse.py
backend/tests/agents/: test_agent_types.py  test_pool_manager.py  test_routing.py
backend/tests/checkpoint/: __init__.py  test_checkpoint_manager.py  test_recovery.py  test_sqlite_saver.py
backend/tests/decomposition_pipeline/: __init__.py
backend/tests/errors/: test_exceptions.py  test_handlers.py
backend/tests/utils/: test_retry.py
(+152 files in other folders)
