[project]
name = "decomposition-pipeline"
version = "0.1.0"
description = "LangGraph-based problem decomposition and solution generation pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.120.2",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/decomposition_pipeline"]
